
1.06 Fri Mar  1 11:05:58 EST 2002
	- Fixed a couple of minor bugs with 'ct help' code
	  introduced in 1.05.

1.07 Tue May  7 12:22:52 EDT 2002
	- Formatting/doc improvements.
	- Added 'lsprivate -eclipsed' flag.

1.08 Wed Feb  5 08:44:22 EST 2003
	- Infrastructure: extended Assert() to take optional messages.

1.09 Tue Jul 22 10:41:32 EDT 2003
	- Fixed contact data.

1.10 Sat Mar 13 17:44:34 EST 2004
	- Add warning when checking in files open in vim.

1.11 Mon Mar 14 00:00:51 EST 2005
	- Cleanups occasioned by port to new environment.
	  Worked around an apparent bug in 5.6.1: the statement
	  "local $0 = ..." causes the user's PATH to be trashed such
	  that $ENV{PATH} looks ok but "system qw(printenv PATH)"
	  doesn't. It's hard to see how that could be my bug but
	  in any case it's not a problem in more modern Perls so
	  I just worked around it for 5.6.
	- The "ct ci" feature now considers only files checked out
	  by the current user in the current view and dir.
	- Port to NCA environments (see 'ncatool').

1.12 Tue May  2 14:29:17 EDT 2006
	- Flush the view cache after creating dirs. This is helpful
	  when the cwd has been mkelem-ed (though you still need to
	  "cd $PWD" after mkelem-ing the cwd).

1.13 Tue May 16 11:56:18 EDT 2006
	- New feature: "ct diffcr -data". Remove pseudo-differences
	  in diffcr output, those caused by files with differing
	  versions but identical contents.
	- Removed the feature of "ct ci" which automatically added
	  "-nc" to checkins of directories. It seemed overly
	  intrusive for a standard wrapper.

1.14 Fri Aug  3 12:26:29 EDT 2007
	- Fixed rt.cpan.org bug #28648 "ct man query_language"
	  does not work.

1.15 Sun Dec 14 18:01:56 GMTST 2008
	- Under CYGWIN as well, default to ipc mode.

1.16 Fri May 14 07:40:25 EDT 2010
        - Burrow function moved here from from DSB.pm and exported.
	- Loop reading std input when no args, including support for -status.
	- Fixed man success return code.
	- POD work.