@@ -156,7 +156,10 @@ Revision history for Perl extension ClearCase::Wrapper.
 	- Under CYGWIN as well, default to ipc mode.
 
 1.16 Fri May 14 07:40:25 EDT 2010
-        - Burrow function moved here from from DSB.pm and exported.
+        - Burrow function moved here from DSB.pm and exported.
 	- Loop reading std input when no args, including support for -status.
 	- Fixed man success return code.
 	- POD work.
+	- Added -mkhlink option to -revert option in checkin
+	- Assert can now be called from a subfunction
+	- Tweaked indenting in show usage function
